# call-me-please

./: .gitignore  LICENSE  README.md  app.json  biome.json  package.json  pnpm-lock.yaml  pyrightconfig.json  todo.md  turbo.json  youtube-thumbnail.avif
app/(tabs)/: _layout.tsx  call-now.tsx  settings.tsx
apps/auth-proxy/: package.json
apps/expo/: .gitignore  app.json  metro.config.js  package.json  tsconfig.json
apps/expo/app/: _layout.tsx  modal.tsx
apps/expo/components/: Button.tsx  HeaderButton.tsx  ScreenContent.tsx  VoicesDropdown.tsx  icons.tsx
apps/expo/data/: presets.ts  voices.ts
apps/expo/hooks/: use-connection.tsx
apps/expo/store/: livekit-state.ts  models.ts  store.ts
apps/expo/types/: Calls.d.ts
apps/nextjs/: .env.example  next.config.js  package.json  tsconfig.json  turbo.json
apps/webrtc-server/: .env.example  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
components/ui/: switch.tsx
expo/: .env.example  app.json  cesconfig.json  global.css  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  turbo.json
expo/app/: _layout.tsx  modal.tsx
expo/components/: AudioVisualizer.tsx  Auth.tsx  Button.tsx  CallInfo.tsx  VoicesDropdown.tsx  icons.tsx
expo/hooks/: use-connection.tsx  useTrackVolume.tsx
expo/services/: notificationServices.ts
expo/src/: prompts.ts
expo/store/: livekit-state.ts  store.ts
expo/supabase/: config.toml
expo/utils/: api.tsx  base-url.ts  permissions.ts
lib/: dateUtils.ts
tooling/typescript/: base.json
(+29 files in other folders)
