[project]
name = "webrtc-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "livekit-agents>=0.12.8",
  "livekit-plugins-openai>=0.10.14",
  "livekit-plugins-playai>=1.0.5",
  "livekit-plugins-silero>=0.7.4",
  "livekit-protocol>=0.8.0",
  "livekit>=0.18.3",
  "python-dotenv==1.0.1",
]
